src/test/ui/hygiene/hygienic-label-3.stderr
error[E0426]: use of undeclared label `'x`
  --> $DIR/hygienic-label-3.rs:2:19
   |
LL |     () => { break 'x; } //~ ERROR use of undeclared label `'x`
   |                   ^^ did you mean `'x`?
...
LL |         foo!()
   |         ------ in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0426`.
